refactor to domain folders

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,5 +1,5 @@
-controllers:
-    resource: ../../src/Controller/
+framework_controllers:
+    resource: ../../src/Framework/Controller
     type: annotation
 
 kernel:
