--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -6,9 +6,7 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
-                is_bundle: false
+            Framework:
                 type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                dir: '%kernel.project_dir%/src/Framework'
+                prefix: 'App\Framework'
