--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,6 @@
 security:
     encoders:
-        App\Entity\User:
+        App\Framework\User:
             algorithm: auto
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
@@ -8,7 +8,7 @@ security:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\Entity\User
+                class: App\Framework\User
                 property: username
     firewalls:
         dev:
@@ -19,7 +19,7 @@ security:
             provider: app_user_provider
             guard:
                 authenticators:
-                    - App\Security\CustomAuthenticator
+                    - App\Framework\Security\CustomAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
