--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -6,7 +6,18 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
+            App:
+                type: annotation
+                dir: '%kernel.project_dir%/src/Entity'
+                prefix: 'App\Entity'
+
             Framework:
                 type: annotation
                 dir: '%kernel.project_dir%/src/Framework'
                 prefix: 'App\Framework'
+
+            TimeTracking:
+                type: annotation
+                dir: '%kernel.project_dir%/src/TimeTracking'
+                prefix: 'App\TimeTracking'
+
