add some xdebug

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -11,11 +11,19 @@ date.timezone = "Europe/Berlin"
 ; Xdebug
 ; See https://xdebug.org/docs/all_settings
 
-;PHPStorm
+; priority=99
 [Xdebug]
-xdebug.remote_enable=1
-xdebug.idekey=PHPSTORM
-xdebug.profiler_enable=0
-xdebug.max_nesting_level=700
-;xdebug.remote_host=192.168.0.1 # your ip
-xdebug.remote_port=9000
+xdebug.var_display_max_children = 256
+xdebug.var_display_max_data = 2048
+xdebug.var_display_max_depth = 6
+xdebug.mode = develop,debug
+xdebug.start_with_request = trigger
+;172.17.0.1
+xdebug.client_host = host.docker.internal
+xdebug.collect_return = On
+xdebug.show_local_vars = on
+;xdebug.trigger_value="XDEBUG_PROFILE"
+xdebug.max_nesting_level = 1000
+
+[zend]
+zend.assertions = 1
