--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,5 +27,9 @@ services:
         resource: '../src/Framework/Controller/'
         tags: ['controller.service_arguments']
 
+    App\TimeTracking\Controller\:
+        resource: '../src/TimeTracking/Controller/'
+        tags: ['controller.service_arguments']
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
