--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\TimeTracking\Listener\ChangeActiveProjectRequestListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.request }
